[package]
name = "hifi-lb"
version = "1.0.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
tokio = { version = "1", features = ["full", "parking_lot"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
bytes = "1"
futures-util = "0.3"
socket2 = "0.5"
